fix(ajapaik): estonian translations not fitting in popover, category suggestion button text not changing between confirm/submit

--- a/ajapaik/ajapaik/static/css/ajp-style.css
+++ b/ajapaik/ajapaik/static/css/ajp-style.css
@@ -2319,3 +2319,7 @@ div.gm-style-mtc > div:nth-of-type(2) > div > label {
 #mark-object-button:focus {
   outline: none;
 }
+
+.popover{
+  max-width: 100%;
+}
